--- a/style.css
+++ b/style.css
@@ -1,16 +1,23 @@
 body {
     margin: 0;
     padding: 0;
-    background: #f4f4f4;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: top;
     height: 100vh;
+  }
+
+  body {
+    background-image: url("../assets/firstpagebg.png");
+    background-size: cover;         
+    background-repeat: no-repeat;   
+    background-position: center;    
+    height: 100vh;                  
+    margin: 0;
   }
 
   .page {
     width: 1920px;
     height: 1080px;
-    background: white;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   }
