--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     display: flex;
     justify-content: center;
-    align-items: top;
+    align-items: center;
     height: 100vh;
   }
 
@@ -39,7 +39,7 @@ body {
 h1 {
   color: #f9f7ff;
   margin-top: 100px;
-  font-size: 60px;
+  font-size: 82.3px;
   text-align: center;
 
   /* Add text outline */
@@ -50,3 +50,17 @@ h1 {
      2px  2px 0 #3f3568;
 }
 
+.top-box {
+  width: 100%;
+  background-color: #c8baeb; 
+  color: #c8baeb;
+  text-align: center;
+  padding: 20px;
+  font-size: 24px;
+  font-weight: bold;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10; /* make sure it's on top */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* subtle shadow */
+}
