--- a/style.css
+++ b/style.css
@@ -5,15 +5,15 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-  }
-
-  body {
     background-image: url("../assets/firstpagebg.png");
     background-size: cover;         
     background-repeat: no-repeat;   
     background-position: center;    
     height: 100vh;                  
     margin: 0;
+    font-family: 'TDTD', sans-serif;
+    font-size: 30px; 
+    font-weight: 900;
   }
 
   .page {
@@ -27,14 +27,6 @@ body {
   src: url('../assets/font.ttf') format('truetype');
 }
 
-body {
-  font-family: 'TDTD', sans-serif;
-}
-
-body {
-  font-size: 30px; 
-  font-weight: 900;
-}
 
 h1 {
   color: #f9f7ff;
@@ -55,12 +47,22 @@ h1 {
   background-color: #c8baeb; 
   color: #c8baeb;
   text-align: center;
-  padding: 20px;
-  font-size: 24px;
+  padding:  30px;
+  font-size: 4px;
   font-weight: bold;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 10; /* make sure it's on top */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* subtle shadow */
+}
+
+.logo-img {
+  width: 150px;
+  height: 80px;
+  object-fit: contain; /* prevents distortion */
+  position: absolute;
+  top: 1px; /* distance from top */
+  left: 0.0005px; /* distance from left */
+  z-index: 11; /* make sure it's above other elements */
 }
