--- a/style.css
+++ b/style.css
@@ -43,24 +43,41 @@ h1 {
 
 .top-box {
   width: 100%;
+  height: 67px;
   background-color: #c8baeb; 
   color: #c8baeb;
-  text-align: center;
-  padding:  30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0px;
   font-size: 4px;
   font-weight: bold;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 10; /* make sure it's on top */
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* subtle shadow */
+  z-index: 10;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .logo-img {
-  width: 120px;
+  width: 120px; /* smaller logo */
   height: 120px;
   position: absolute;
-  top: -18px; /* negative value moves it up */
-  left: 0.0005px;
+  top: -15px; /* centered in 67px box */
+  left: 10px;
   z-index: 11;
+}
+.nav-link {
+  color: #f9f7ff;
+  text-decoration: none;
+  font-size: 24px; /* change this value to make text bigger/smaller */
+  font-weight: bold;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+.nav-menu {
+  display: flex;
+  gap: 200px; /* increased from 30px - change this value for more/less separation */
+   justify-content: center; /* centers the navigation menu */
 }
