--- a/cafe.css
+++ b/cafe.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  background-image: url("../assets/cafebg.png");
+  background-image: url("../assets/cafebg6.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center top;
